--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ```{r, fig.alt = "Illustration of an imp looking at a hand of playing cards. Published on page 193 of Le grand Etteilla, ou, l'art de tirer les cartes.", out.width="100%", echo=FALSE}
