--- a/README.Rmd
+++ b/README.Rmd
@@ -13,13 +13,36 @@ knitr::opts_chunk$set(
 )
 ```
 
+# ympes
+
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/TimTaylor/ympes/actions/workflows/R-CMD-check.yaml){.pkgdown-devel}
+[![CRAN status](https://www.r-pkg.org/badges/version/ympes)](https://CRAN.R-project.org/package=ympes){.pkgdown-release}
 <!-- badges: end -->
+
+ympes provides a collection of lightweight helper functions (imps) both for
+interactive use and for inclusion within other packages. These include functions
+for visualising colour palettes, quoting user input, working with age intervals
+and a set of minimal assertion functions.
 
 ```{r, fig.alt = "Illustration of an imp looking at a hand of playing cards. Published on page 193 of Le grand Etteilla, ou, l'art de tirer les cartes.", out.width="100%", echo=FALSE}
 knitr::include_graphics("man/figures/750px-Imp_with_cards_-_illustration_from_Le_grand_Etteilla.jpg")
 ```
+
+You can install the released version of ympes from [CRAN](https://cran.r-project.org/) with:
+
+```{r, eval = FALSE}
+install.packages("ympes")
+```
+
+
+::: {.pkgdown-devel}
+The development version of ympes can be installed from GitHub with:
+```{r, eval = FALSE}
+remotes::install_github("TimTaylor/ympes")
+```
+:::
+
 
 ___
 
