--- a/vignettes/ympes.Rmd
+++ b/vignettes/ympes.Rmd
@@ -147,3 +147,95 @@ writing the same code a lot so here we are
 new_name(mtcars)
 new_name(mtcars, 3L)
 ```
+
+## Assertions (Experimental)
+Where better place for yet another implementation of bespoke assertion functions
+than a small helper package!. Motivated by `vctrs::vec_assert()` but with lower
+overhead at a cost of less flexibility. The assertion functions in ympes are
+designed to make it easy to identify the top level calling function whether used
+within a user facing function or internally. They are somewhat experimental in
+nature and should be treated accordingly!
+
+Currently implemented are:
+
+`assert_character()`, `assert_chr()`,
+`assert_character_not_na()`, `assert_chr_not_na()`,
+`assert_scalar_character()`, `assert_scalar_chr()`,
+`assert_scalar_character_not_na()`, `assert_scalar_chr_not_na()`,
+`assert_string()`, `assert_string_not_na()`,
+
+`assert_double()`, `assert_dbl()`, 
+`assert_double_not_na()`, `assert_dbl_not_na()`,
+`assert_scalar_double()`, `assert_scalar_dbl()`,
+`assert_scalar_double_not_na()`, `assert_scalar_dbl_not_na()`,
+
+`assert_integer()`, `assert_int()`,
+`assert_integer_not_na()`, `assert_int_not_na()`,
+`assert_scalar_integer()`, `assert_scalar_int()`,
+`assert_scalar_integer_not_na()`, `assert_scalar_int_not_na()`,
+`assert_integerish()`, `assert_whole()`
+`assert_scalar_whole()`, `assert_scalar_integerish()`,
+
+`assert_logical()`, `assert_lgl()`,
+`assert_logical_not_na()`, `assert_lgl_not_na()`,
+`assert_scalar_logical()`, `assert_scalar_lgl()`,
+`assert_scalar_logical_not_na()`, `assert_scalar_lgl_not_na()`,
+`assert_bool()`, `assert_boolean()`,
+
+`assert_list()`,
+`assert_data_frame()`,
+
+`assert_negative()`, `assert_negative_or_na()`,
+`assert_positive()`, `assert_positive_or_na()`,
+`assert_non_negative()`, `assert_non_negative_or_na()`,
+`assert_non_positive()`, `assert_non_positive_or_na()`,
+
+`assert_numeric()`, `assert_num()`,
+`assert_numeric_not_na()`, `assert_num_not_na()`,
+ `assert_scalar_numeric()`, `assert_scalar_num()`,
+`assert_scalar_numeric_not_na()`, `assert_scalar_num_not_na()`,
+
+`assert_between()`
+
+Hopefully most of these are self-explanatory but there is some opinionated
+(currently undocumented) handling of NA so care should be taken to inspect
+the underlying source code before using.
+
+Currently these assertions return NULL if the assertion succeeds. Otherwise an
+error of class "ympes-error" (with optional subclass if supplied when calling
+the assertion).
+
+```{r}
+# Use in a user facing function
+fun <- function(i, d, l, chr, b) {
+    assert_scalar_int(i)
+    TRUE
+}
+fun(i=1L)
+try(fun(i="cat"))
+
+# Use in an internal function
+internal_fun <- function(a) {
+    assert_string(
+        a,
+        .arg = deparse(substitute(x)),
+        .call = sys.call(-1L),
+        .subclass = "example_error"
+    )
+    TRUE
+}
+external_fun <- function(b) {
+    internal_fun(a=b)
+}
+
+external_fun(b="cat")
+try(external_fun(b = letters))
+tryCatch(external_fun(b = letters), error = class)
+```
+
+
+
+
+
+
+
